--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,19 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Get latest tag
+        run: |
+          latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
+          echo "Latest tag is $latest_tag"
+          echo "::set-output name=latest_tag::$latest_tag"
+
+      - name: Determine new version
+        id: semver
+        uses: anothrNick/github-tag-action@1.20.0
+        with:
+          push_tag: true
+          prefix: v
+          tag_name: ${{ steps.latest_tag.outputs.latest_tag }}
       - name: Determine new version
         id: semver
         uses: anothrNick/github-tag-action@1.20.0
