--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout code and get latest tag
         uses: actions/checkout@v2
-
-      - name: Get latest tag
+        with:
+          fetch-depth: 0
         run: |
           latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
           echo "Latest tag is $latest_tag"
