--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,14 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code and get latest tag
+      - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-        run: |
-          latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-          echo "Latest tag is $latest_tag"
-          echo "::set-output name=latest_tag::$latest_tag"
+
+      - name: Get Latest Tag
+        id: latest_tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
 
       - name: Determine new version
         id: semver
@@ -25,7 +23,7 @@ jobs:
         with:
           push_tag: true
           prefix: v
-          tag_name: ${{ steps.latest_tag.outputs.latest_tag }}
+          tag_name: ${{ steps.latest_tag.outputs.tag }}
 
       - name: Build Docker image
         run: |
