--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,9 +25,8 @@ jobs:
         id: semver
         uses: anothrNick/github-tag-action@1.20.0
         with:
-          push_tag: true
-          prefix: v
-          tag_name: ${{ steps.latest_tag.outputs.latest_tag }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
