--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -5,38 +5,34 @@ on:
     tags:
       - 'v*'
 jobs:
-  build-and-push:
+  Patch:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: '0'
+      - name: Minor version for each merge
+        id: dryrun
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DRY_RUN: true
 
-
-      - name: Get latest tag
-        id : tag
+      - name: echo new tag
         run: |
-          latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-          echo "Latest tag is $latest_tag"
-          echo "::set-output name=latest_tag::$latest_tag"
+          echo "The next tag version will be: ${{ steps.dryrun.outputs.new_tag }}"
+      - name: echo tag
+        run: |
+          echo "The current tag is: ${{ steps.dryrun.outputs.tag }}"
+      - name: echo part
+        run: |
+          echo "The version increment was: ${{ steps.dryrun.outputs.part }}"
+      
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push latest
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: giovannidegiorgio/sons-of-the-docker:latest
-      - name: Build and push tag
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags:  giovannidegiorgio/sons-of-the-docker:{{ steps.tag.outputs.tag_name }}
+      - name: Minor version for each merge
+        id: taggerFinal
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
