--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -3,7 +3,8 @@ name: Docker Build and Push
 on:
   push:
     tags:
-      - 'v*'
+      - v[0-9]+.[0-9]+.[0-9]+
+concurrency: production
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -13,20 +14,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
-      - name: Get latest tag
-        run: |
-          latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
-          echo "Latest tag is $latest_tag"
-          echo "::set-output name=latest_tag::$latest_tag"
-
-      - name: Determine new version
-        id: semver
-        uses: anothrNick/github-tag-action@1.20.0
-        with:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          WITH_V: true
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -34,8 +21,8 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build and push latest
         uses: docker/build-push-action@v5
         with:
@@ -45,4 +32,4 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags:  giovannidegiorgio/sons-of-the-docker:latest
+          tags:  giovannidegiorgio/sons-of-the-docker:${{ github.ref_name }}
