--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
-concurrency: production
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -22,7 +21,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build and push latest
         uses: docker/build-push-action@v5
         with:
