--- a/.github/workflows/push-image.yaml
+++ b/.github/workflows/push-image.yaml
@@ -5,7 +5,7 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+
 jobs:
-  build-and-push:
+  publish-to-dockerhub:
     runs-on: ubuntu-latest
 
     steps:
