ci: fix syntax error in sast.yaml

--- a/.github/workflows/sast.yaml
+++ b/.github/workflows/sast.yaml
@@ -22,4 +22,4 @@ jobs:
         format: 'table'
         exit-code: '1'
         ignore-unfixed: 'true'
-        vuln-type: 'os,library',
+        vuln-type: 'os,library'
